k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eks-devops-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: eks-devops-app

  template:
    metadata:
      labels:
        app: eks-devops-app

    spec:
      containers:
        - name: eks-devops-container
          image: eks-devops-app:v3
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "500m"

          volumeMounts:
            - name: persistent-storage
              mountPath: /app-data

      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: demo-pvc
