k8s/dynamic-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: dynamic-storage-pod

spec:
  containers:
    - name: dynamic-storage-container
      image: busybox

      command:
        - "/bin/sh"
        - "-c"
        - "while true; do echo Dynamic StorageClass Volume >> /data/dynamic.txt; sleep 5; done"

      volumeMounts:
        - name: dynamic-storage
          mountPath: /data

  volumes:
    - name: dynamic-storage
      persistentVolumeClaim:
        claimName: dynamic-pvc
