k8s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: eks-devops-pod

  labels:
    app: nodejs-app

spec:
  containers:
    - name: nodejs-container
      image: eks-devops-app:v1
      imagePullPolicy: Never
      ports:
        - containerPort: 3000
