k8s/pvc-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-demo-pod

spec:
  containers:
    - name: pvc-demo-container
      image: busybox

      command:
        - "/bin/sh"
        - "-c"
        - "while true; do echo Persistent Kubernetes Storage >> /data/storage.txt; sleep 5; done"

      volumeMounts:
        - name: persistent-storage
          mountPath: /data

  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: demo-pvc
