k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: nginx-stateful

spec:
  serviceName: nginx-stateful-service

  replicas: 2

  selector:
    matchLabels:
      app: nginx-stateful

  template:
    metadata:
      labels:
        app: nginx-stateful

    spec:
      containers:
        - name: nginx
          image: nginx

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
    - metadata:
        name: nginx-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
