k8s/volume-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-demo-pod

spec:
  containers:
    - name: volume-demo-container
      image: busybox
      command: ["/bin/sh", "-c", "while true; do echo Hello from Kubernetes Volume >> /data/message.txt; sleep 5; done"]

      volumeMounts:
        - name: shared-storage
          mountPath: /data

  volumes:
    - name: shared-storage
      emptyDir: {}
