k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: eks-devops-service

spec:
  selector:
    app: nodejs-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
