k8s/statefulset-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-stateful-service

spec:
  clusterIP: None

  selector:
    app: nginx-stateful

  ports:
    - port: 80
      targetPort: 80
